<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#F4CC2D"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="0dp"
            android:background="#ED3237"
            android:src="@drawable/ic_baseline_home_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:text="@string/pendaftaran"
            android:textColor="@color/white"
            android:textSize="22sp" />


    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#00AFEF"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="#00A859"
        android:gravity="start|center"
        android:padding="10dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <TextView
        android:id="@+id/tv_nim"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="#00A859"
        android:gravity="start|center"
        android:padding="10dp"
        android:text="@string/nim"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/tv_nama" />


    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="#00A859"
        android:gravity="start|center"
        android:padding="10dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/tv_nim" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="#3E4095"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/daftar"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />


</androidx.constraintlayout.widget.ConstraintLayout>